--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "final-project-gr2-backend",
   "description": "Final Project of Group 2 - Backend",
   "version": "0.0.0",
@@ -7,15 +6,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development nodemon ./server.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "start": "node ./server.js"
   },
-  "scripts": {
-    "start": "cross-env NODE_ENV=production node ./server.js",
-    "dev": "cross-env NODE_ENV=development nodemon ./server.js",
-  },
-   "repository": {
-   "type": "git",
-   "url": "git+https://github.com/kabakmichal/final-project-gr2-backend.git"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kabakmichal/final-project-gr2-backend.git"
   },
   "author": "Vitaliy Zhyryk",
   "license": "ISC",
@@ -44,7 +40,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "nodemon": "2.0.15",
-      "cross-env": "^7.0.3"
-
+    "cross-env": "^7.0.3"
   }
 }
