--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "start": "node ./server.js",
-    "build:digitalocean": "npm install --production=false && npm run build"
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "npm run build:client:js && npm run build:client:css",
+    "build:client:js": "echo 'Building client JS'",
+    "build:client:css": "echo 'Building client CSS'",
+    "build:server": "echo 'Building server JS'"
   },
   "repository": {
     "type": "git",
