--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
-    "start": "node ./server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "node server.js",
     "build": "npm run build:client && npm run build:server",
     "build:client": "npm run build:client:js && npm run build:client:css",
     "build:client:js": "echo 'Building client JS'",
@@ -24,16 +24,18 @@
   },
   "homepage": "https://github.com/kabakmichal/final-project-gr2-backend#readme",
   "dependencies": {
-    "cors": "2.8.5",
-    "cross-env": "7.0.3",
-    "express": "4.17.1",
-    "morgan": "1.10.0",
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
+    "express": "4.17.1",
     "joi": "^17.7.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "morgan": "1.10.0",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.1.1",
     "uuid": "^9.0.0"
   }
 }
